--- a/TODO.txt
+++ b/TODO.txt
@@ -1,8 +1,9 @@
 1.) Add feature to mark preffered device in case multiple
 devices (network interfaces) are active [✓ version 9]
-2.) Improve documentation use JSDoc markup.
-3.) Add some unit tests and continuous integration.
-4.) Migrate to flutter depending on community support.
+2.) Add support for gnome 40 [target - version 10]
+3.) Improve documentation use JSDoc markup.
+4.) Add some unit tests and continuous integration.
+5.) Migrate to flutter depending on community support.
 
 [top feature request from extension store comments]
 1.) Make the data reset optional. [target - version 10]
