--- a/locale/network-stats.pot
+++ b/locale/network-stats.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: network-stats 1.0\n"
 "Report-Msgid-Bugs-To: noroadsleft000@gmail.com\n"
-"POT-Creation-Date: 2021-11-14 22:27+0530\n"
+"POT-Creation-Date: 2021-11-16 23:49+0530\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: No roads left noroadsleft000@gmail.com\n"
 "Language-Team: LANGUAGE noroadsleft000@gmail.com\n"
@@ -89,7 +89,10 @@ msgstr ""
 msgid "IP"
 msgstr ""
 
-msgid "since"
+msgid "Since last reseted"
+msgstr ""
+
+msgid "Last reseted at"
 msgstr ""
 
 msgid "Yes"
