Update English translations

--- a/locale/en_US.po
+++ b/locale/en_US.po
@@ -1,8 +1,8 @@
-msgid ""
+#msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "PO-Revision-Date: 2021-05-25 20:23+0530\n"
-"Last-Translator: No roads left <noroadsleft000@gmail.com>\n"
+"Last-Translator: AidanWarner97 <aidanlw@outlook.com>\n"
 "Language-Team: English\n"
 "Language: en_US\n"
 "MIME-Version: 1.0\n"
@@ -91,11 +91,11 @@ msgstr "Make Default"
 msgid "IP"
 msgstr "IP"
 
-msgid "Since last reseted"
-msgstr "Since last reseted"
+msgid "Since last reset"
+msgstr "Since last reset"
 
-msgid "Last reseted at"
-msgstr "Last reseted at"
+msgid "Last reset at"
+msgstr "Last reset at"
 
 msgid "Yes"
 msgstr "Yes"
