--- a/locale/network-stats.pot
+++ b/locale/network-stats.pot
@@ -10,7 +10,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: noroadsleft000@gmail.com\n"
 "POT-Creation-Date: 2022-03-07 21:42+0530\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: No roads left noroadsleft000@gmail.com\n"
+"Last-Translator: AidanWarner97 aidanlw@outlook.com\n"
 "Language-Team: LANGUAGE noroadsleft000@gmail.com\n"
 "Language: \n"
 "MIME-Version: 1.0\n"
@@ -98,10 +98,10 @@ msgstr ""
 msgid "IP"
 msgstr ""
 
-msgid "Since last reseted"
+msgid "Since last reset"
 msgstr ""
 
-msgid "Last reseted at"
+msgid "Last reset at"
 msgstr ""
 
 msgid "Yes"
